Acrescentar valor de vendas

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Página home</h1>
-    <a href="index.html">Ir para vendas</a>
+    <a href="vendas.html">Ir para vendas</a>
 </body>
 </html>
