--- a/vendas.html
+++ b/vendas.html
@@ -6,7 +6,8 @@
     <title>Site de vendas</title>
 </head>
 <body>
-    <h1>Página home</h1>
+    <h1>Página de vendas</h1>
+    <p>Vendas = R$ 5000,00</p>
     <a href="index.html">Voltar</a>
 </body>
 </html>
