Update blog again

--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Blog</h1>
     <h1>Página numero 1</h1>
+    <h1>Página numero 2</h1>
     <a href="index.html">Ir para home</a>
 </body>
 </html>
