--- a/vendas.html
+++ b/vendas.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Página de vendas</h1>
-    <p>Vendas = R$ 5000,00</p>
     <a href="index.html">Voltar</a>
+    <h2>Relatório de vendas</h2>
+    <p>Venda 1</p>
+    <p>Venda 2</p>
 </body>
 </html>
